# Amadeus

./: .gitignore  Cargo.toml  README.md  amadeus.db  config.toml.example  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: memory.rs  mod.rs  persona.rs  tools.rs
src-tauri/src/llm/: mod.rs  ollama.rs
src-tauri/src/system/: screenshot.rs
src-tauri/src/voice/: stt.rs
src/agent/: persona.rs
src/avatar/: expression.rs  mod.rs  renderer.rs
src/components/: AvatarCanvas.tsx  ChatPanel.tsx
src/hooks/: useChat.ts
src/llm/: local.rs
src/system/: browser.rs  files.rs  input.rs  mod.rs  screenshot.rs
src/voice/: tts.rs
