[package]
name = "amadeus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3.31"
anyhow = "1.0.95"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }

# LLM Backend (local GGUF)
llama-cpp-2 = { version = "0.1.135", features = ["metal"] }
encoding_rs = "0.8"

# Phase 2 dependencies
enigo = "0.6.1" 
arboard = "3.4.1"
chromiumoxide = { version = "0.6.0", features = ["tokio-runtime"] }
screenshots = "0.8.10" 
image = "0.25.5"
base64 = "0.22.1"
schemars = "0.8.21"

# Phase 3 dependencies
whisper-rs = { version = "0.13.2", features = ["coreml"] } 
cpal = "0.15.3"
rodio = "0.20.1"
hound = "3.5.1"
rubato = "0.16.1"
# tts removed (using 'say' command)

# Phase 4 dependencies
bevy = { version = "0.13.2", features = ["dynamic_linking"] }





[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
