[package]
name = "amadeus"
version = "0.1.0"
description = "Amadeus - AI Assistant"
authors = ["sjkim1127"]
edition = "2021"

[lib]
name = "amadeus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP & Networking
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# LLM Backend (local GGUF)
llama-cpp-2 = { version = "0.1.135", features = ["metal"] }
encoding_rs = "0.8"

# System Tools
enigo = "0.6.1"
arboard = "3.4.1"
chromiumoxide = { version = "0.6.0", features = ["tokio-runtime"] }
screenshots = "0.8.10"
image = "0.25"
base64 = "0.22"
schemars = "0.8"

# Voice
whisper-rs = { version = "0.13.2", features = ["coreml"] }
cpal = "0.15"
rodio = "0.20"
hound = "3.5"
rubato = "0.16"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
